--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -70,7 +70,7 @@ footer a {
 
 /* Hero Style Start */
 .hero {
-  background-image: url("../images/hero-section.jpeg");
+  background-image: url("../images/hero-bg.jpg");
   height: 600px;
   background-size: cover;
   background-position: center;
