--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -143,9 +143,9 @@ footer a {
   color: #fce138;
 }
 
-.intro {
+/* .intro {
   text-align: center;
-}
+} */
 
 .intro p {
   line-height: 1.7;
@@ -153,20 +153,21 @@ footer a {
   width: 80%;
   font-size: 20px;
   margin: 0 auto;
+  text-align: center;
 }
 
 .steps {
-  text-align: center;
   background: #fce138;
 }
 
 .section-title {
   font-size: 55px;
   color: #024e76;
-  margin-bottom: 35px;
-  padding: 0 100px 20px 100px;
-  display: inline-block;
   border-bottom: 3px solid;
+  padding-bottom: 20px;
+  text-align: center;
+  margin: 0 auto 35px auto;
+  width: 50%;
 }
 
 .primary-border {
@@ -201,9 +202,8 @@ footer a {
   font-size: 38px;
 }
 
-.trainers {
-  text-align: center;
-}
+/* .trainers {
+} */
 
 .trainer {
   width: 900px;
@@ -232,6 +232,10 @@ footer a {
   text-align: right;
 }
 
+.flex-row {
+  display: flex;
+}
+
 .trainer-bio h3 {
   font-size: 32px;
   margin-bottom: 8px;
@@ -250,7 +254,6 @@ footer a {
 
 .contact {
   background-color: #024e76;
-  text-align: center;
 }
 
 .contact h2 {
