--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,7 +5,6 @@
 }
 
 body {
-  /* this is a comment in css */
   color: #39a6b2;
   font-family: Helvetica, Arial, sans-serif;
 }
@@ -18,6 +17,14 @@ header {
   display: flex;
   justify-content: space-between;
   flex-wrap: wrap;
+  position: -webkit-sticky;
+  position: sticky;
+  top: 0;
+  background-image: url("../images/hero-bg.jpg");
+  background-size: cover;
+  background-position: center;
+  background-attachment: fixed;
+  background-position: 80%;
 }
 
 header h1 {
@@ -25,6 +32,7 @@ header h1 {
   font-size: 36px;
   color: #fce138;
   margin: 0;
+  text-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
 }
 
 header a {
@@ -36,10 +44,6 @@ header nav {
   margin: 7px 0;
 }
 
-/* header nav ul li {
-  display: inline;
-} */
-
 header nav ul {
   display: flex;
   flex-wrap: wrap;
@@ -49,10 +53,17 @@ header nav ul {
 }
 
 header nav ul li a {
-  /* margin: 0 30px; */
   padding: 10px 15px;
   font-weight: lighter;
   font-size: 1.55vw;
+  text-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+}
+
+header nav ul li a:hover {
+  background: #fce138;
+  color: #024e76;
+  border-radius: 15px;
+  text-shadow: none;
 }
 
 footer {
@@ -88,15 +99,23 @@ footer a {
   justify-content: center;
   flex-wrap: wrap;
   align-items: flex-start;
+  background-attachment: fixed;
+  background-position: 80%;
 }
 
 .hero-form {
   border: 3px solid #024e76;
-  background-color: #fce138;
+  background-color: rgba(252, 225, 56, 0.8);
   padding: 20px;
   color: #024e76;
   width: 40%;
   margin: 3.5%;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+  border-radius: 15px;
+}
+
+.hero-form button:hover {
+  background-color: #39a6b2;
 }
 
 .hero-form h3 {
@@ -116,6 +135,13 @@ footer a {
   color: #024e76;
   width: 100%;
   margin-bottom: 15px;
+  border-radius: 10px;
+  background-color: rgba(255, 255, 255, 0.75);
+}
+
+.form-input:focus {
+  background-color: rgba(255, 255, 255, 1);
+  outline: none;
 }
 
 .hero-form label {
@@ -128,6 +154,7 @@ footer a {
   border: none;
   padding: 10px 20px;
   font-size: 16px;
+  border-radius: 10px;
 }
 
 .hero-cta {
@@ -143,11 +170,8 @@ footer a {
   font-style: italic;
   font-size: 55px;
   color: #fce138;
+  text-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
 }
-
-/* .intro {
-  text-align: center;
-} */
 
 .intro p {
   line-height: 1.7;
@@ -180,16 +204,11 @@ footer a {
   margin: 50px auto;
   padding-bottom: 50px;
   width: 80%;
-  border-bottom: 1px solid #39a6b2;
   display: flex;
   flex-wrap: wrap;
   align-items: center;
   justify-content: space-between;
 }
-
-/* .steps div {
-  margin-bottom: 80px;
-} */
 
 .step-img {
   flex: 1 12%;
@@ -228,9 +247,9 @@ footer a {
   align-items: center;
 }
 
-/* .steps span {
-  font-size: 38px;
-} */
+.step:not(:last-child) {
+  border-bottom: 1px solid #39a6b2;
+}
 
 .trainers {
   width: 100%;
@@ -331,6 +350,19 @@ footer a {
   width: 100%;
   margin-bottom: 15px;
   margin-top: 5px;
+  border-radius: 10px;
+  background-color: rgba(255, 255, 255, 0.75);
+}
+
+.contact-form input:focus,
+.contact-form textarea:focus {
+  background-color: rgba(255, 255, 255, 1);
+  outline: none;
+}
+
+.contact-form button:hover {
+  color: #fce138;
+  background: #39a6b2;
 }
 
 .contact-form button {
@@ -341,6 +373,7 @@ footer a {
   text-align: center;
   padding: 15px 0;
   font-size: 16px;
+  border-radius: 10px;
 }
 
 .contact-info > * {
@@ -360,6 +393,7 @@ section {
   header {
     padding-bottom: 0;
     justify-content: center;
+    position: relative;
   }
 
   header h1 {
